[Feat] user 관련 API 작성 및 테스트 #31 - user 관련 API 명세서 수정 - user 관련 API 작성 - user 관련 API 테스트 - CORS 설정 추가 - authMiddleware 수정
